data/derived/fa15/progs/unify/prog0574.ml.out
Characters 516-532:
  | Op (x, y, z) -> "("^(exprToString x)^"*"^(exprToString y)^"*"^(exprToString z)")/("^(exprToString x)^"+"^(exprToString y)^"+"(exprToString z)^")";;
                                                                  ^^^^^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
